--- a/photo.html
+++ b/photo.html
@@ -117,8 +117,8 @@ function updateUI() {
 
  // Ukuran final fix
 const canvas = document.createElement("canvas");
-canvas.width = 220;
-canvas.height = 170;
+canvas.width = 880; // 4x lebih tajam
+canvas.height = 680;
 
 const ctx = canvas.getContext("2d");
 
