--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <meta property="og:image" content="https://github.com/hikarisproject21/photostrip/blob/main/tubnail.jpg" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Preconnect untuk fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <title>Photostrip wonwoo day</title>
+
+<!-- Open Graph (pastikan pakai raw URL) -->
+<meta property="og:image" content="https://raw.githubusercontent.com/hikarisproject21/photostrip/main/tubnail.jpg" />
+<meta property="og:title" content="Photostrip Wonwoo Day" />
+<meta property="og:description" content="A special photostrip to Wonwoo Day" />
+<title>Photostrip wonwoo day</title>
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
